<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="instructionsViewModel"
            type="com.udacity.shoestore.instructions.InstructionsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/instructions_text"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="left"
            android:text="@string/instructions" />

        <TextView
            android:id="@+id/here_some_instructions_text"
            style="@style/HighlightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/instruction_detailed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instruction_1"
                style="@style/HighlightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/instruction_detailed_step1"/>

            <TextView
                android:id="@+id/instruction_2"
                style="@style/HighlightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/instruction_detailed_step2" />

            <TextView
                android:id="@+id/instruction_3"
                style="@style/HighlightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/instruction_detailed_step3" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="@style/DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> instructionsViewModel.onCallShoeList()}"
            android:text="@string/go_to_shoe_list"/>

    </LinearLayout>
</layout>