<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.login.LoginViewModel" />
    </data>

    <!--LinearLayout was chosen because the TextView followed by EditText
    is based on a horizontal pattern to present the fields that user needs to fill in.
    This aspect provides a better UI visualization for user-->

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            style="@style/DefaultTextView" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            style="@style/DefaultEditText" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            style="@style/DefaultTextView" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPassword"
            style="@style/DefaultEditText" />

        <!--LinearLayout was chosen because it's easier to present the buttons
        on a vertical organization in order to user check what is the best option to choose-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <Button
                android:id="@+id/newlogin_button"
                style="@style/DefaultButton"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> loginViewModel.onCallWelcome()}"
                android:text="@string/new_login" />

            <Button
                android:id="@+id/existinglogin_button"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> loginViewModel.onCallWelcome()}"
                android:text="@string/login_with_existing_account" />

        </LinearLayout>

    </LinearLayout>
</layout>